--- a/eq_snom/i18n/de.po
+++ b/eq_snom/i18n/de.po
@@ -1,3 +1,67 @@
-## The fastest way to create a translation, is to go into the "Setting" of Odoo and to click on "Export Translation" which is in "Import / Export".
-## In the new window you need to select the Language, the fiel format "PO File" and the Module. Afterwards click on "Export" and a new Window with the
-## Downloadlink for the *.po File will show up.
+# Translation of Odoo Server.
+# This file contains the translation of the following modules:
+#	* eq_snom
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: Odoo Server 8.0 Build 1508002\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2015-08-11 08:48+0000\n"
+"PO-Revision-Date: 2015-08-11 08:48+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: \n"
+"Plural-Forms: \n"
+
+#. module: eq_snom
+#: view:res.partner:eq_snom.eq_view_partner_snom
+msgid "Call"
+msgstr "Anrufen"
+
+#. module: eq_snom
+#: field:res.users,eq_snom_ip_name:0
+msgid "IP/Name"
+msgstr "IP/Name"
+
+#. module: eq_snom
+#: view:res.partner:eq_snom.eq_view_partner_snom
+msgid "Mobile"
+msgstr "Mobil"
+
+#. module: eq_snom
+#: model:ir.model,name:eq_snom.model_res_partner
+msgid "Partner"
+msgstr "Partner"
+
+#. module: eq_snom
+#: field:res.users,eq_snom_password:0
+msgid "Password"
+msgstr "Passwort"
+
+#. module: eq_snom
+#: view:res.partner:eq_snom.eq_view_partner_snom
+msgid "Phone"
+msgstr "Telefon"
+
+#. module: eq_snom
+#: field:res.users,eq_snom_prefix:0
+msgid "Prefix"
+msgstr "Prefix"
+
+#. module: eq_snom
+#: view:res.users:eq_snom.eq_view_users_form_snom
+msgid "Snom-Phone settings"
+msgstr "Snom-Telefoneinstellungen"
+
+#. module: eq_snom
+#: field:res.users,eq_snom_user:0
+msgid "User"
+msgstr "Benutzer"
+
+#. module: eq_snom
+#: model:ir.model,name:eq_snom.model_res_users
+msgid "Users"
+msgstr "Benutzer"
+
