[IMP] Show "price_surchage" in "Pricelist Items" table as new column

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2054,3 +2054,8 @@ msgstr "Mindestbestellmenge"
 #: field:product.product,eq_sale_min_qty:0
 msgid "Min. order quantity"
 msgstr "Mindestbestellmenge"
+
+#. module: equitania
+#: view:product.pricelist.item:equitania.eq_framework_agreement_tree_view
+msgid "Price"
+msgstr "Preis"
