[ADD] eq_quotation_enhancement von odoo-trading verschoben Gutschrift in Korrektur-Rechnung umbenannt.

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -1828,7 +1828,7 @@ msgstr "Abgebrochene Rechnung"
 #. module: equitania
 #: view:website:account.report_invoice_document
 msgid "Refund"
-msgstr "Gutschrift"
+msgstr "Korrektur-Rechnung"
 
 #. module: equitania
 #: view:website:account.report_invoice_document
