--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2073,3 +2073,9 @@ msgstr "Festpreis setzen"
 #: model:ir.ui.menu,name:equitania.menu_eq_lead_referred
 msgid "Referred by"
 msgstr "Vermittelt durch"
+
+#. module: purchase
+#: model:ir.actions.act_window,name:purchase.purchase_line_form_action2
+#: model:ir.ui.menu,name:purchase.menu_purchase_line_order_draft
+msgid "Open Purchase Order Lines"
+msgstr "Bestellpositionen"
