[IMP] Improved logic for setting of correct salutaion (extra for companies and person)

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2177,8 +2177,13 @@ msgid "\n"
 msgstr "\n"
 "<div style=\"font-family: 'Lucica Grande', Ubuntu, Arial, Verdana, sans-serif; font-size: 12px; color: rgb(34, 34, 34); background-color: rgb(255, 255, 255); \">\n"
 "\n"
-"    <p>Sehr geehrter ${object.partner_id.title.name} ${object.partner_id.name},</p>\n"
 "    \n"
+"        % if object.partner_id.is_company:\n"
+"    		<p>Sehr geehrte Damen & Herren,</p>\n"
+"        % endif\n"
+"        % if object.partner_id.is_company == False:\n"
+"    		<p>Sehr geehrte(r) ${object.partner_id.title.name} ${object.partner_id.name},</p>\n"
+"        % endif\n"
 "    <p>&nbsp;${object.state in ('draft', 'sent') and 'wir haben Ihre Anfrage erhalten und melden uns umgehend wegen der Bestellbestätigung bei Ihnen.' or 'hiermit bestägigen wir Ihnen folgende Bestellung.'}</p>\n"
 "\n"
 "<table class=\"table table-condensed\">\n"
