--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2447,3 +2447,13 @@ msgstr "Benutzer"
 #: view:product.template.standard_price_history:equitania.eq_product_template_standard_price_history_tree_view
 msgid "Cost Price History"
 msgstr "Historie Anschaffungspreis"
+
+#. module: equitania
+#: field:sale.config.settings,module_equitania_limit_address_sale:0
+msgid "Limit the invoice and supplier address [equitania]"
+msgstr "Die Rechnungs- und Lieferadresse beschränken [equitania]"
+
+#. module: equitania
+#: help:sale.config.settings,module_equitania_limit_address_sale:0
+msgid "Limit the invoice and supplier address to the children of the parent address."
+msgstr "Hierdurch wird bei der Anfrage und Bestellung die Rechnungs- und Lieferadresse auf die Unteradressen der Hauptadresse beschränkt."
