--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2559,3 +2559,10 @@ msgstr "Kopftext [equitania]"
 #: field:sale.config.settings,eq_foot_text_invoice:0
 msgid "Invoice foot text [equitania]"
 msgstr "Fußtext [equitania]"
+
+#. module: crm
+#: field:base.partner.merge.automatic.wizard,state:0
+#: view:crm.lead:crm.crm_case_form_view_leads
+#: view:crm.lead:crm.crm_case_form_view_oppor field:crm.lead,state_id:0
+msgid "State"
+msgstr "Bundesland"
