--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -1,20 +1,22 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* equitania
+# 	* equitania
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0 Build 160302\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-18 16:49+0000\n"
-"PO-Revision-Date: 2016-03-18 16:49+0000\n"
-"Last-Translator: <>\n"
+"PO-Revision-Date: 2016-03-18 20:21+0100\n"
+"Last-Translator: Martin Schmid <m.schmid@equitania.com>\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"Language: de\n"
+"X-Generator: Poedit 1.8.7\n"
 
 #. module: equitania
 #: code:addons/equitania/res_groups.py:34
@@ -55,25 +57,29 @@ msgstr "3. Person"
 
 #. module: equitania
 #: view:website:equitania.report_invoice_data
-msgid "</tbody>\n"
-"				                    </table>\n"
-"				                    <p style=\"page-break-before:always;\"> </p>\n"
-"				                    <table class=\"table table-condensed\">"
-msgstr "</tbody>\n"
-"				                    </table>\n"
-"				                    <p style=\"page-break-before:always;\"> </p>\n"
-"				                    <table class=\"table table-condensed\">"
+msgid ""
+"</tbody>\n"
+"\t\t\t\t                    </table>\n"
+"\t\t\t\t                    <p style=\"page-break-before:always;\"> </p>\n"
+"\t\t\t\t                    <table class=\"table table-condensed\">"
+msgstr ""
+"</tbody>\n"
+"\t\t\t\t                    </table>\n"
+"\t\t\t\t                    <p style=\"page-break-before:always;\"> </p>\n"
+"\t\t\t\t                    <table class=\"table table-condensed\">"
 
 #. module: equitania
 #: view:website:equitania.report_saleorder_data
-msgid "</tbody>\n"
-"	                            </table>\n"
-"	                            <p style=\"page-break-before:always;\"> </p>	                            	                           \n"
-"	                            <table class=\"table table-condensed\">"
-msgstr "</tbody>\n"
-"	                            </table>\n"
-"	                            <p style=\"page-break-before:always;\"> </p>	                            	                           \n"
-"	                            <table class=\"table table-condensed\">"
+msgid ""
+"</tbody>\n"
+"\t                            </table>\n"
+"\t                            <p style=\"page-break-before:always;\"> </p>\t                            \t                           \n"
+"\t                            <table class=\"table table-condensed\">"
+msgstr ""
+"</tbody>\n"
+"\t                            </table>\n"
+"\t                            <p style=\"page-break-before:always;\"> </p>\t                            \t                           \n"
+"\t                            <table class=\"table table-condensed\">"
 
 #. module: equitania
 #: code:addons/equitania/wizard/eq_date_done_change.py:34
@@ -84,9 +90,11 @@ msgstr "<div><b>Lieferdatum wurde geändert</p></div><div>Von:  Auf: <div>Grund:
 #. module: equitania
 #: code:addons/equitania/sale.py:37
 #, python-format
-msgid "<div><b>Position Storniert</p></div><div>Product: \n"
+msgid ""
+"<div><b>Position Storniert</p></div><div>Product: \n"
 "Menge: "
-msgstr "<div><b>Position Storniert</p></div><div>Product: \n"
+msgstr ""
+"<div><b>Position Storniert</p></div><div>Product: \n"
 "Menge: "
 
 #. module: equitania
@@ -180,8 +188,7 @@ msgid "Base Price"
 msgstr "Basispreis"
 
 #. module: equitania
-#: field:crm.lead,birthdate:0
-#: field:res.partner,eq_birthday:0
+#: field:crm.lead,birthdate:0 field:res.partner,eq_birthday:0
 msgid "Birthday"
 msgstr "Geburtstag"
 
@@ -378,16 +385,14 @@ msgid "Create New Customer"
 msgstr "Create New Customer"
 
 #. module: equitania
-#: field:eq.clean.data,create_uid:0
-#: field:eq.date.done.change,create_uid:0
+#: field:eq.clean.data,create_uid:0 field:eq.date.done.change,create_uid:0
 #: field:eq.delivery.conditions,create_uid:0
 #: field:eq.lead.referred,create_uid:0
 #: field:eq.product.analysis.data,create_uid:0
 #: field:eq.product.analysis.data.master,create_uid:0
 #: field:eq.product.sales.data,create_uid:0
 #: field:eq.product.sales.data.master,create_uid:0
-#: field:eq_info_optional,create_uid:0
-#: field:eq_install_func,create_uid:0
+#: field:eq_info_optional,create_uid:0 field:eq_install_func,create_uid:0
 #: field:eq_multy_assign_product_no,create_uid:0
 #: field:eq_pricelist_item_search,create_uid:0
 #: field:eq_report_helper,create_uid:0
@@ -398,16 +403,14 @@ msgid "Created by"
 msgstr "Erstellt von"
 
 #. module: equitania
-#: field:eq.clean.data,create_date:0
-#: field:eq.date.done.change,create_date:0
+#: field:eq.clean.data,create_date:0 field:eq.date.done.change,create_date:0
 #: field:eq.delivery.conditions,create_date:0
 #: field:eq.lead.referred,create_date:0
 #: field:eq.product.analysis.data,create_date:0
 #: field:eq.product.analysis.data.master,create_date:0
 #: field:eq.product.sales.data,create_date:0
 #: field:eq.product.sales.data.master,create_date:0
-#: field:eq_info_optional,create_date:0
-#: field:eq_install_func,create_date:0
+#: field:eq_info_optional,create_date:0 field:eq_install_func,create_date:0
 #: field:eq_multy_assign_product_no,create_date:0
 #: field:eq_pricelist_item_search,create_date:0
 #: field:eq_report_helper,create_date:0
@@ -570,15 +573,13 @@ msgid "Discount (%)"
 msgstr "Rabatt (%)"
 
 #. module: equitania
-#: field:res.company,eq_citypart:0
-#: field:res.partner,eq_citypart:0
+#: field:res.company,eq_citypart:0 field:res.partner,eq_citypart:0
 msgid "Disctirct"
 msgstr "Disctirct"
 
 #. module: equitania
 #: view:crm.lead:equitania.crm_case_form_view_oppor_ext
-#: view:crm.lead:equitania.crm_lead_form_ext
-#: field:crm.lead,eq_citypart:0
+#: view:crm.lead:equitania.crm_lead_form_ext field:crm.lead,eq_citypart:0
 #: view:res.partner:equitania.eq_partner_extension_form_view
 msgid "District"
 msgstr "Stadtteil"
@@ -627,8 +628,7 @@ msgid "E-Mail"
 msgstr "E-Mail"
 
 #. module: equitania
-#: field:eq.product.analysis.data,ean:0
-#: field:eq.product.sales.data,ean:0
+#: field:eq.product.analysis.data,ean:0 field:eq.product.sales.data,ean:0
 #: view:website:equitania.eq_product_analysis_report
 #: view:website:equitania.eq_product_sales_report
 msgid "EAN"
@@ -741,8 +741,7 @@ msgstr "Arbeitsvorbereitung abgeschlossen"
 
 #. module: equitania
 #: view:crm.lead:equitania.crm_case_form_view_oppor_ext
-#: view:crm.lead:equitania.crm_lead_form_ext
-#: field:crm.lead,firstname:0
+#: view:crm.lead:equitania.crm_lead_form_ext field:crm.lead,firstname:0
 #: view:res.partner:equitania.eq_partner_extension_form_view
 #: field:res.partner,eq_firstname:0
 msgid "Firstname"
@@ -849,8 +848,7 @@ msgid "House no"
 msgstr "Hausnr."
 
 #. module: equitania
-#: field:res.company,eq_house_no:0
-#: field:res.partner,eq_house_no:0
+#: field:res.company,eq_house_no:0 field:res.partner,eq_house_no:0
 msgid "House number"
 msgstr "Hausnummer"
 
@@ -866,22 +864,14 @@ msgid "IBAN:"
 msgstr "IBAN:"
 
 #. module: equitania
-#: field:basemodel.extend,id:0
-#: field:eq.clean.data,id:0
-#: field:eq.date.done.change,id:0
-#: field:eq.delivery.conditions,id:0
-#: field:eq.lead.referred,id:0
-#: field:eq.product.analysis.data,id:0
-#: field:eq.product.analysis.data.master,id:0
-#: field:eq.product.sales.data,id:0
-#: field:eq.product.sales.data.master,id:0
-#: field:eq_info_optional,id:0
-#: field:eq_install_func,id:0
-#: field:eq_multy_assign_product_no,id:0
-#: field:eq_open_sale_order_line,id:0
-#: field:eq_pricelist_item_search,id:0
-#: field:eq_report_helper,id:0
-#: field:equitania.product.analysis.report.wiz,id:0
+#: field:basemodel.extend,id:0 field:eq.clean.data,id:0
+#: field:eq.date.done.change,id:0 field:eq.delivery.conditions,id:0
+#: field:eq.lead.referred,id:0 field:eq.product.analysis.data,id:0
+#: field:eq.product.analysis.data.master,id:0 field:eq.product.sales.data,id:0
+#: field:eq.product.sales.data.master,id:0 field:eq_info_optional,id:0
+#: field:eq_install_func,id:0 field:eq_multy_assign_product_no,id:0
+#: field:eq_open_sale_order_line,id:0 field:eq_pricelist_item_search,id:0
+#: field:eq_report_helper,id:0 field:equitania.product.analysis.report.wiz,id:0
 #: field:equitania.product.sales.report.wiz,id:0
 #: field:product.template.standard_price_history,id:0
 #: field:report.account.report_invoice,id:0
@@ -892,8 +882,7 @@ msgstr "IBAN:"
 #: field:report.purchase.report_purchaseorder,id:0
 #: field:report.purchase.report_purchasequotation,id:0
 #: field:report.sale.report_saleorder,id:0
-#: field:report.stock.report_picking,id:0
-#: field:sale_layout.category,id:0
+#: field:report.stock.report_picking,id:0 field:sale_layout.category,id:0
 msgid "ID"
 msgstr "ID"
 
@@ -917,11 +906,10 @@ msgstr "Incoterm"
 #: view:website:equitania.report_purchasequotation_data
 #: view:website:equitania.report_saleorder_data
 msgid "Incoterm:"
-msgstr "Lieferbedingungen:"
+msgstr "Incoterm:"
 
 #. module: equitania
-#: field:product.product,eq_index:0
-#: field:product.template,eq_index:0
+#: field:product.product,eq_index:0 field:product.template,eq_index:0
 msgid "Index"
 msgstr "Index"
 
@@ -1064,16 +1052,13 @@ msgid "Lagerbuchung"
 msgstr "Lagerbuchung"
 
 #. module: equitania
-#: field:eq.clean.data,write_uid:0
-#: field:eq.date.done.change,write_uid:0
-#: field:eq.delivery.conditions,write_uid:0
-#: field:eq.lead.referred,write_uid:0
+#: field:eq.clean.data,write_uid:0 field:eq.date.done.change,write_uid:0
+#: field:eq.delivery.conditions,write_uid:0 field:eq.lead.referred,write_uid:0
 #: field:eq.product.analysis.data,write_uid:0
 #: field:eq.product.analysis.data.master,write_uid:0
 #: field:eq.product.sales.data,write_uid:0
 #: field:eq.product.sales.data.master,write_uid:0
-#: field:eq_info_optional,write_uid:0
-#: field:eq_install_func,write_uid:0
+#: field:eq_info_optional,write_uid:0 field:eq_install_func,write_uid:0
 #: field:eq_multy_assign_product_no,write_uid:0
 #: field:eq_pricelist_item_search,write_uid:0
 #: field:eq_report_helper,write_uid:0
@@ -1085,16 +1070,14 @@ msgid "Last Updated by"
 msgstr "Zuletzt bearbeitet von"
 
 #. module: equitania
-#: field:eq.clean.data,write_date:0
-#: field:eq.date.done.change,write_date:0
+#: field:eq.clean.data,write_date:0 field:eq.date.done.change,write_date:0
 #: field:eq.delivery.conditions,write_date:0
 #: field:eq.lead.referred,write_date:0
 #: field:eq.product.analysis.data,write_date:0
 #: field:eq.product.analysis.data.master,write_date:0
 #: field:eq.product.sales.data,write_date:0
 #: field:eq.product.sales.data.master,write_date:0
-#: field:eq_info_optional,write_date:0
-#: field:eq_install_func,write_date:0
+#: field:eq_info_optional,write_date:0 field:eq_install_func,write_date:0
 #: field:eq_multy_assign_product_no,write_date:0
 #: field:eq_pricelist_item_search,write_date:0
 #: field:eq_report_helper,write_date:0
@@ -1107,8 +1090,7 @@ msgstr "Zuletzt bearbeitet am"
 
 #. module: equitania
 #: view:crm.lead:equitania.crm_case_form_view_oppor_ext
-#: view:crm.lead:equitania.crm_lead_form_ext
-#: field:crm.lead,lastname:0
+#: view:crm.lead:equitania.crm_lead_form_ext field:crm.lead,lastname:0
 msgid "Lastname"
 msgstr "Nachname"
 
@@ -1654,7 +1636,7 @@ msgstr "Angebotsdatum"
 #. module: equitania
 #: view:website:equitania.eq_external_layout_header_sale_order_data
 msgid "Quotation no."
-msgstr "Angebots Nr."
+msgstr "Angebotsnr."
 
 #. module: equitania
 #: field:product.product,eq_rrp:0
@@ -1667,8 +1649,7 @@ msgid "Reason"
 msgstr "Grund"
 
 #. module: equitania
-#: field:crm.lead,eq_lead_referred_id:0
-#: field:crm.lead,eq_lead_referred_name:0
+#: field:crm.lead,eq_lead_referred_id:0 field:crm.lead,eq_lead_referred_name:0
 #: field:res.partner,eq_lead_referred_id:0
 msgid "Referred By"
 msgstr "Vermittelt durch"
@@ -1712,7 +1693,7 @@ msgstr "Reportkonfiguration"
 #. module: equitania
 #: model:ir.ui.menu,name:equitania.Report_configuration
 msgid "Report Layout Categories"
-msgstr "Report Layout Kategorien"
+msgstr "Report Sektionen"
 
 #. module: equitania
 #: view:purchase.config.settings:equitania.eq_view_purchase_config_settings_delivery
@@ -1747,8 +1728,7 @@ msgid "Sale Order"
 msgstr "Auftrag"
 
 #. module: equitania
-#: field:account.invoice,eq_ref_number:0
-#: field:stock.picking,eq_ref_number:0
+#: field:account.invoice,eq_ref_number:0 field:stock.picking,eq_ref_number:0
 msgid "Sale Order Referenc"
 msgstr "Belegnr. des Kunden"
 
@@ -1783,8 +1763,7 @@ msgid "Saleorder"
 msgstr "Verkaufsauftrag"
 
 #. module: equitania
-#: field:product.product,eq_sale_count:0
-#: field:product.template,eq_sale_count:0
+#: field:product.product,eq_sale_count:0 field:product.template,eq_sale_count:0
 msgid "Sales"
 msgstr "Verkäufe"
 
@@ -1879,8 +1858,7 @@ msgstr "Trennzeichen [equitania]"
 #. module: equitania
 #: field:account.invoice.line,eq_pos_no:0
 #: field:eq_open_sale_order_line,eq_pos:0
-#: field:purchase.order.line,eq_sequence:0
-#: field:stock.move,eq_pos_no:0
+#: field:purchase.order.line,eq_sequence:0 field:stock.move,eq_pos_no:0
 #: view:website:equitania.eq_report_stockpicking_return_data
 #: view:website:equitania.report_invoice_data
 #: view:website:equitania.report_picking_data
@@ -2121,10 +2099,8 @@ msgid "Texts"
 msgstr "Texte"
 
 #. module: equitania
-#: help:res.company,eq_custom_1:0
-#: help:res.company,eq_custom_2:0
-#: help:res.company,eq_custom_3:0
-#: help:res.company,eq_custom_4:0
+#: help:res.company,eq_custom_1:0 help:res.company,eq_custom_2:0
+#: help:res.company,eq_custom_3:0 help:res.company,eq_custom_4:0
 msgid "The content of this field may be used in the header or footer of reports."
 msgstr "Der Inhalt dieser Felder kann für die Reports benutzt werden."
 
@@ -2172,19 +2148,23 @@ msgstr "The source location must be the same for all the moves of the picking."
 
 #. module: equitania
 #: model:res.groups,comment:equitania.purchase_in_products
-msgid "The user will see the procurements tab in the\n"
-"				products.\n"
-"			"
-msgstr "The user will see the procurements tab in the\n"
-"				products.\n"
-"			"
+msgid ""
+"The user will see the procurements tab in the\n"
+"\t\t\t\tproducts.\n"
+"\t\t\t"
+msgstr ""
+"The user will see the procurements tab in the\n"
+"\t\t\t\tproducts.\n"
+"\t\t\t"
 
 #. module: equitania
 #: model:res.groups,comment:equitania.supplier_in_account
-msgid "The user will see the supplier tab in accounting.\n"
-"			"
-msgstr "The user will see the supplier tab in accounting.\n"
-"			"
+msgid ""
+"The user will see the supplier tab in accounting.\n"
+"\t\t\t"
+msgstr ""
+"The user will see the supplier tab in accounting.\n"
+"\t\t\t"
 
 #. module: equitania
 #: help:stock.config.settings,module_eq_info_for_product_product:0
@@ -2498,8 +2478,7 @@ msgid "other"
 msgstr "Andere"
 
 #. module: equitania
-#: field:account.invoice.line,eq_move_id:0
-#: field:product.category,eq_custom01:0
+#: field:account.invoice.line,eq_move_id:0 field:product.category,eq_custom01:0
 #: field:product.pricelist.version,eq_custom01:0
 #: field:product.product,eq_custom01:0
 #: field:product.product,eq_default_code_dub:0
@@ -2511,10 +2490,8 @@ msgstr "Andere"
 #: field:product.template,eq_invoice_count_in:0
 #: field:product.template,eq_invoice_count_out:0
 #: field:product.template,eq_pricelist_items_count:0
-#: field:product.template,eq_state_dup:0
-#: field:res.partner,eq_custom01:0
-#: field:res.partner,eq_deb_cred_number:0
-#: field:res.users,eq_custom01:0
+#: field:product.template,eq_state_dup:0 field:res.partner,eq_custom01:0
+#: field:res.partner,eq_deb_cred_number:0 field:res.users,eq_custom01:0
 msgid "unknown"
 msgstr "unbekannt"
 
@@ -2569,4 +2546,3 @@ msgstr "{'search_default_customer':1, 'show_address': 0,'active_model':'sale.ord
 #: view:purchase.order:equitania.eq_purchase_order_form_view_inherit
 msgid "{'search_default_supplier':1, 'default_supplier':1, 'default_customer':0, 'eq_filter_prod_sup': eq_filter_prod_sup, 'eq_order_line': order_line}"
 msgstr "{'search_default_supplier':1, 'default_supplier':1, 'default_customer':0, 'eq_filter_prod_sup': eq_filter_prod_sup, 'eq_order_line': order_line}"
-
