--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 8.0 Build 160302\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-18 16:49+0000\n"
-"PO-Revision-Date: 2016-03-18 20:21+0100\n"
+"PO-Revision-Date: 2016-03-22 15:42+0100\n"
 "Last-Translator: Martin Schmid <m.schmid@equitania.com>\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
@@ -2442,7 +2442,7 @@ msgstr "equitania_reports_manager"
 #. module: equitania
 #: view:website:equitania.report_invoice_data
 msgid "from"
-msgstr "vom"
+msgstr "ab"
 
 #. module: equitania
 #: code:addons/equitania/eq_address_extension_new_api.py:82
