--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2579,3 +2579,17 @@ msgstr "{'search_default_customer':1, 'show_address': 0,'active_model':'sale.ord
 #: view:purchase.order:equitania.eq_purchase_order_form_view_inherit
 msgid "{'search_default_supplier':1, 'default_supplier':1, 'default_customer':0, 'eq_filter_prod_sup': eq_filter_prod_sup, 'eq_order_line': order_line}"
 msgstr "{'search_default_supplier':1, 'default_supplier':1, 'default_customer':0, 'eq_filter_prod_sup': eq_filter_prod_sup, 'eq_order_line': order_line}"
+
+#. module: equitania
+#: view:sale.order:equitania.eq_sale_order_from_view_eq_customer_ref
+#: field:sale.order,eq_use_page_break_after_header:0
+msgid "Page break after header text [equitania]"
+msgstr "Seitenumbruch nach Kopftext [equitania]"
+
+#. module: equitania
+#: view:account.invoice:equitania.eq_invoice_form
+#: field:account.invoice,eq_use_page_break_after_header:0
+#: view:sale.order:equitania.eq_sale_order_from_view_eq_customer_ref
+#: field:sale.order,eq_use_page_break_after_header:0
+msgid "Page break after header text [equitania]"
+msgstr "Seitenumbruch nach Kopftext [equitania]"
